# Unlicense — cochranblock.org
# Contributors: GotEmCoach, KOVA, Claude Opus 4.6

[package]
name = "whobelooking"
version = "0.1.0"
edition = "2024"
description = "Who's looking? CF visitor ID + federal contract scout. SAM.gov + USASpending + SBIR load-balanced queries. Zero cloud. One binary."
license = "Unlicense"
repository = "https://github.com/cochranblock/whobelooking"
keywords = ["analytics", "reverse-dns", "lead-generation", "cloudflare", "gov-contracts"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
hickory-resolver = "0.25"
sled = "0.34"
dirs = "5"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
